--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -19,9 +19,9 @@
         </li>
         <li class="active">
                 <div class="fix">
-                    <a routerLink="/course-category">
+                    <a routerLink="/course-list">
                         <span class="ico"><img src="assets/image/ico1.png"></span>
-                        <span class="value">تست تست</span>
+                        <span class="value">دوره ها</span>
                     </a>
                 </div>
             </li>
