loading added to project

--- a/src/app/academy/course/course.component.html
+++ b/src/app/academy/course/course.component.html
@@ -1,1 +1,5 @@
-<h1>Course Page - {{courseId}}</h1>
+<h1>id : {{model.id}}</h1>
+<h1>title : {{model.title}}</h1>
+<h1>instructor : {{model.instructor}}</h1>
+
+<button (click)="save()">Save</button>
