--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+<ngx-loading-bar [color]="'yellow'"></ngx-loading-bar>
 <app-menu-bar></app-menu-bar>
 
 <div class="content">
         <router-outlet></router-outlet>
 </div>
+
